--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@mdi/react": "^1.6.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-to-pdf": "^1.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
